tests/baselines/reference/parserForOfStatement11.errors.txt
tests/cases/conformance/parser/ecmascript6/Iterators/parserForOfStatement11.ts(1,1): error TS9003: 'for...of' statements are not currently supported.


==== tests/cases/conformance/parser/ecmascript6/Iterators/parserForOfStatement11.ts (1 errors) ====
    for (const [a, b] of X) {
    ~~~
!!! error TS9003: 'for...of' statements are not currently supported.
    }